<resources>
    <string name="app_name">Line Up</string>

    <string name="desc">Content description</string>

    <string name="how_easy">How easy was the task?</string>
    <string name="too_easy">Too easy</string>
    <string name="just_right">Just right</string>
    <string name="too_hard">Too hard</string>

    <string name="how_hard">How hard did you try to do your best at the task?</string>
    <string name="not_tryhard">I did not try very hard</string>
    <string name="tried_best">I tried my best</string>

    <string name="enjoyed">I enjoyed this task very much.</string>
    <string name="did_well">I think I did pretty well in this task.</string>
    <string name="tap_face">Tap a face to continue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
