<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="edu.uci.wmp.lineup.fragments.EffortQuestion">

    <TextView
        android:id="@+id/tvEffortQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/gap_large"
        android:gravity="center_vertical"
        android:text="@string/how_easy"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_mediumlarge"/>

    <LinearLayout
        android:id="@+id/llEffortImages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEffortQuestion"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivEffortFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/difficulty1"/>

        <ImageView
            android:id="@+id/ivEffortSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/difficulty2"/>

        <ImageView
            android:id="@+id/ivEffortThird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/difficulty3"/>

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEffortQuestion"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:max="100"
        android:maxHeight="3dp"
        android:minHeight="3dp"
        android:progress="50"
        android:progressDrawable="@drawable/seekbar_progressbar"
        android:thumb="@drawable/thumb"/>

    <RelativeLayout
        android:id="@+id/rlSeekBarLabels"
        android:layout_width="@dimen/seekbar_label_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEffortQuestion">

        <TextView
            android:id="@+id/tvSeekBarFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/seekbar_label_margin_height"
            android:drawableTop="@drawable/seekbar_stop"
            android:text="@string/too_easy"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_medium"/>

        <TextView
            android:id="@+id/tvSeekBarSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/seekbar_label_margin_height"
            android:drawableTop="@drawable/seekbar_stop"
            android:text="@string/just_right"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_medium"/>

        <TextView
            android:id="@+id/tvSeekBarThird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/seekbar_label_margin_height"
            android:drawableTop="@drawable/seekbar_stop"
            android:text="@string/too_hard"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_medium"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/ivEffortQuestionsDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/desc"
        android:src="@drawable/done"/>

</RelativeLayout>
